# internal/handler/user.go
@@ -1,0 +1,57 @@
+package handler
+
+import (
+	"cloudDrive/internal/user"
+	"net/http"
+
+	"github.com/gin-gonic/gin"
+	"gorm.io/gorm"
+)
+
+// RegisterHandler 用户注册
+// @Summary 用户注册
+// @Description 注册新用户
+// @Tags 用户模块
+// @Accept json
+// @Produce json
+// @Param data body user.RegisterRequest true "注册参数"
+// @Success 200 {object} map[string]interface{}
+// @Failure 400 {object} map[string]interface{}
+// @Router /user/register [post]
+func RegisterHandler(c *gin.Context) {
+	var req user.RegisterRequest
+	if err := c.ShouldBindJSON(&req); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "参数错误", "detail": err.Error()})
+		return
+	}
+	resp, err := user.Register(c.MustGet("db").(*gorm.DB), req)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+	c.JSON(http.StatusOK, gin.H{"id": resp.ID})
+}
+
+// LoginHandler 用户登录
+// @Summary 用户登录
+// @Description 用户登录
+// @Tags 用户模块
+// @Accept json
+// @Produce json
+// @Param data body user.LoginRequest true "登录参数"
+// @Success 200 {object} map[string]interface{}
+// @Failure 400 {object} map[string]interface{}
+// @Router /user/login [post]
+func LoginHandler(c *gin.Context) {
+	var req user.LoginRequest
+	if err := c.ShouldBindJSON(&req); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "参数错误", "detail": err.Error()})
+		return
+	}
+	resp, err := user.Login(c.MustGet("db").(*gorm.DB), req)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+	c.JSON(http.StatusOK, resp)
+}
